<resources>
    <string name="app_name">CreepyRabbit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My Account</string>
    <string name="profile">Profile</string>
    <string name="other">Other</string>
    <string name="notification">Notifications</string>
    <string name="userName">Robin Mikel</string>
    <string name="prompt_email">Email</string>
    <string name="new_email">New email</string>
    <string name="prompt_password">Password</string>
    <string name="new_pass">New password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="greeting">Gelou there</string>
    <string name="myName">Elena</string>
    <string name="don_t_have_an_account_register_now">Do not have an account? <b>Register Now</b></string>
    <string name="username">Username</string>
    <string name="email_hint">your username</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>
    <string name="categoryPlaceholer">category here?</string>
    <string name="startTime">0:00</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="userimage">userImage</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="supernatural">Supernatural</string>
    <string name="rules">Rules</string>
    <string name="humans_beasts">Humans &amp; Beasts</string>
    <string name="all">All collections</string>
    <string name="edit">Edit</string>
    <string name="pass_hint">*************</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="bye">Until next time!</string>
    <string name="narrator">Narrator: 1$s</string>
    <string name="author">Author: %1$s</string>
    <string name="contact">Contact us</string>
    <string name="category">Category: </string>
    <string name="custom_string">%1$s | narrated by %2$s.</string>
    <string name="favorites">Add to favorites</string>
    <string name="loading">LOADING…</string>
    <string name="added">Added</string>
    <string name="favorites_list">Favorites</string>
    <string name="my_lists">My    lists</string>
    <string name="remove">Remove</string>
    <string name="subContact">We are listening!</string>
    <string name="msj">How can we help? Write us any query, complain or suggestion</string>
    <string name="send">Send</string>
    <string name="policy">By clicking Send, you agree that you have read our Data Use Policy.</string>
    <string name="narrated">Narrated by: %1$s</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="join_us">Join us!</string>
</resources>