<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/my_account"
        >
        <menu>

            <item
                android:id="@+id/home"
                android:title="@string/home"

                android:icon="@drawable/ic_home"
                />
            <item
                android:id="@+id/notification"
                android:title="@string/notification"
                android:icon="@drawable/ic_notifications"
                />
            <item
                android:id="@+id/profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_person"
                />


        </menu>

    </item>
    <item
        android:title="@string/categories"
        >
        <menu>
            <item
                android:title="@string/supernatural"
                android:icon="@drawable/ic_supernatural"
                />
            <item
                android:title="@string/rules"
                android:icon="@drawable/ic_rule"
                />
            <item
                android:title="@string/humans_beasts"
                android:icon="@drawable/ic_user_circle"
                />
            <item
                android:id="@+id/allCollections"
                android:title="@string/all"
                android:icon="@drawable/ic_border"
                />

        </menu>


    </item>
    <item
        android:title="@string/other"
        >
        <menu>
            <item
                android:title="@string/contact"
                android:icon="@drawable/ic_message"
                />
            <item
                android:id="@+id/sign_out"
                android:title="@string/sign_out"
                android:icon="@drawable/ic_sign_out"
                />

        </menu>


    </item>


</menu>