<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation.fragments.ContactUsFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/plain_grey">


      <EditText
          android:id="@+id/ET_user_feedback"
          android:layout_width="339dp"
          android:layout_height="259dp"
          android:layout_marginTop="16dp"
          android:ems="12"
          android:gravity="start|top"
          android:inputType="textMultiLine"
          android:textSize="30sp"
          android:fontFamily="@font/open_sans_light"
          android:textColor="@color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.489"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/subtitle" />

      <Button
          android:id="@+id/btnSend"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="28dp"
          android:text="@string/send"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView6" />

      <TextView
          android:id="@+id/textContactForm"
          style="@style/TextBlackTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="36dp"
          android:layout_marginEnd="60dp"
          android:text="@string/subContact"
          android:textSize="34sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="354dp"
          android:layout_height="52dp"
          android:layout_marginBottom="148dp"
          android:text="@string/policy"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.478"
          app:layout_constraintStart_toStartOf="parent" />

      <TextView
          android:id="@+id/subtitle"
          style="@style/TextDescription"
          android:layout_width="366dp"
          android:layout_height="73dp"
          android:layout_marginTop="30dp"
          android:gravity="center"
          android:text="@string/msj"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.333"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textContactForm" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>