<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain_grey"
    tools:context=".ui.view.RegisterActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="164dp"
        android:layout_height="218dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="67dp"
        android:layout_height="51dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <EditText
        android:id="@+id/ET_registeredName"
        style="@style/RegisterDescription"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:textColor="@color/white"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.588" />

    <EditText
        android:id="@+id/ET_registeredEmail"
        style="@style/RegisterDescription"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textColor="@color/white"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/ET_registeredUsername"
        style="@style/RegisterDescription"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:textColor="@color/white"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/ET_registeredPassword"
        style="@style/RegisterDescription"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass_hint"
        android:textColorHint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/join_us"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="33dp" />
</androidx.constraintlayout.widget.ConstraintLayout>