<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/plain_grey"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="181dp"
            android:layout_height="174dp"
            android:layout_marginTop="308dp"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:lineSpacingExtra="10sp"
            android:text="@string/my_lists"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonFavs"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="193dp"
            android:layout_height="59dp"
            android:elevation="3dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/favorites_list"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <ImageView
            android:layout_width="700dp"
            android:layout_height="739dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/userimage"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.69" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>